--- a/src/style.css
+++ b/src/style.css
@@ -88,6 +88,14 @@ td {
     width: 50%;
 }
 
+#timeWrapper
+{
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
+    padding: 0 15px 0 15px;
+    align-items: center;
+}
 .wrapper {
     text-align: center;
     display: flex;
@@ -96,9 +104,22 @@ td {
     align-items: center;
 }
 
+#breakTimer {
+    font-family: monospace;
+    font-size: 16px;
+    color: var(--OBR-font);
+    text-align: center;
+}
 #breakLength {
     text-align: center;
+    background-color: var(--OBR-dark-blue);
+    color: var(--OBR-font);
+    border-color: var(--OBR-font);
+    border-width: 1px;
+    border-radius: 6px;
+    border-style: solid;
     width: 30%;
+    padding: 5px;
 }
 
 button {
